--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=liquibase-demo
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=password
-
-spring.liquibase.change-log:classpath:src/main/resources/db/changelog/changelog.sql
+sspring.datasource.url=jdbc:mysql://database-dev.c1i0i2cgwfwb.us-east-2.rds.amazonaws.com:3306/database_dev
+spring.datasource.username=admin
+spring.datasource.password=admin123
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
